# calfem-python

./: .gitignore  .pdm-python  .pdm.toml  .readthedocs.yaml  LICENSE  MANIFEST.in  Mesh_Ex_01.py  Mesh_Ex_02.py  Mesh_Ex_03.py  Mesh_Ex_05.py  Mesh_Ex_06.py  Mesh_Ex_07.py  Mesh_Ex_08.py  Mesh_Ex_09.py  Mesh_Ex_10.py  Mesh_Ex_11.py  QtVariant.py  README.md  README.rst  TYPE_HINTS.md  build-package.py  calfem-python.psproj  example_output.py  example_output_dict.py  example_output_old.py  example_outputs.py  exm1.py  exm10.py  exm2.py  exm3.py  exm4.py  exm5.py  exm6.py  exm7.py  exm9.py  exmqt1.py  exmqt1.spec  exmqt11.py  exmqt11.ui  exmqt6.py  (+34 more)
.github/workflows/: pages.yml
.ipynb_checkpoints/: exs_beam1-checkpoint.ipynb
PyQt/: binding_helper.py
archive/: setup-org.py  setup.py
calfem/: Export.py  __init__.py  classes_qt4.py  core.py  editor.py  editor.ui  editor_scene.py  experimental.py  geometry.py  intvis.py  mesh.py  misc.py  qt5.py  shapes.py  solver.py  ui.py  utils.py  vedo_utils.py  vis.py  vis_mpl.py  vis_vedo.py  vis_vedo_utils.py
calfem_python_small.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: Makefile  make.bat  requirements.txt
docs/docs/: calfem_reference.md  developer.md  index.md  installation.md  mesh_examples.md  mesh_guide.md  using_calfem.md
docs/source/: calfem_core.rst  calfem_examples.rst  calfem_geometry.rst  calfem_mesh.rst  calfem_mesh_guide.rst  calfem_reference.rst  calfem_ui.rst  calfem_utils.rst  calfem_vis.rst  conf.py  developer.rst  exs1.rst  index.rst  installation.rst  mesh_examples.rst  mesh_guide.rst  standard_examples.rst  using_calfem.rst
examplegeo/: ex8.geo
examples/: Untitled.ipynb  _test.geo.opt  cfeditor.py  cfeditor.ui  ex_beam2.py  ex_tutorial_1.py  ex_tutorial_2.py  example1.py  exd_beam2_b.py  exd_beam2_m.py  exd_beam2_t.py  exd_beam2_tr.py  exe_stress_2d_editor.py  exed1.py  exedit1.py  exg_disp.py  exint1.py  exm0.py  exm0_mpl.py  exm1.ipynb  exm1.py  exm10.ipynb  exm10.py  exm10_mpl.py  exm11.py  exm12.py  exm12_mpl.py  exm13.ipynb  exm13_mpl.py  exm14_vtk.py  exm1_mpl.py  exm1_mpl_qt.py  exm2.ipynb  exm2.py  exm2_mpl.py  exm3.ipynb  exm3.py  exm3_mpl.py  exm4.py  exm4_mpl.py  (+87 more)
examples/.ipynb_checkpoints/: exs2-checkpoint.ipynb
examples/experimental/: exed1.py  exed1.ui  (+13 more)
nbproject/: project.properties
old/: pycalfem.py  pycalfem_GeoData.py  pycalfem_mesh.py  pycalfem_utils.py  solver.py
resources/: resources.qrc
tests/: test_plantf.py  test_red.py
trimesh.temp/: polyfile.1.ele  polyfile.1.node  polyfile.1.poly  polyfile.poly
(+114 files in other folders)
