[project]
name = "calfem-python"
version = "3.6.13"
description = "CALFEM for Python"
authors = [
    {name = "Jonas Lindemann", email = "jonas.lindemann@lunarc.lu.se"},
    {name = "Jonas Lindemann", email = "jonas.lindemann@gmail.com"},
]
dependencies = [
    "gmsh",
    "matplotlib",
    "numpy",
    "scipy",
    "tabulate",
]

requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "finite element",
    "math",
    "numerics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/CALFEM/calfem-python"
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[project.optional-dependencies]
visvis = [ "visvis" ]
vedo = [ "vedo" ]
pyvtk = [ "pyvtk" ]
qtpy = [ "qtpy" ]
